--- a/css/master.css
+++ b/css/master.css
@@ -31,8 +31,7 @@
 
   h2 {
     color: #075AAB;
-    margin-bottom: 2.5rem;
-    margin-top: 2.5rem;    /* set the text color of to #075AAB here */
+    /* set the text color of to #075AAB here */
     /* set both the bottom margin and top margin to 2.5rem here */
    }
 
