--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -18,7 +18,7 @@ body, h1, h2, h3, h4, h5, h6 {
   padding-bottom: 50px;
   text-align: center;
   color: #f8f8f8;
-  background: url(../img/rocks-small.jpeg) no-repeat center center;
+  background: url(../img/IKA.jpg) no-repeat center center;
   background-size: cover;
   min-height: 100%;
 }
